
2006-05-10: Version 0.1.11-BETA
- Fix Makefile for < VDR 1.3.48.
- do not print any messages with -v0
- Patch from Hulk: Fix endless recursion in Message1()
- Patch from Morone: enable graphTFT display of cover images again

2008-01-04: Version 0.1.12-BETA
- Fix compilation and some compiler warnings.
- Fix build with FLAC++ >= 1.1.3.
- Rename image_convert.sh to muggle-image-convert, install it in
  "make install", make it a bit more robust.

2008-4-11: Version 0.2.0-BETA
- supports UTF-8, see README.i18n
- rewrote the player OSD, using code from the music plugin.
- can automatically and asynchronously get lyrics using the
  amarok script googlyrics, see README 
- MP3Decoder: Suppress out of sync error message for first frame
- Player: If called for just one file which does not exist,
  it no more starts.
- Import with mugglei: Absolute paths have always been forbidden, now
  mugglei actually ignores them
- remove some debugging output which came even if no debugging wanted
- mugglei: fix postgresql help text
- postgresql: Default for user now is the login name
- mugglei -c now also deletes and rebuilds existing data bases
- mugglei: after importing, always delete albums without corresponding tracks
- mugglei: New german and french translations using the new mechanisms
- while playing, some text was not yet translatable
- switch to new internalisation system. Currently, no finnish translation.
  Maybe somebody will do that?
- more complete german and french translations. 
- gcc 4.3 build fixes
- rename image cache directory to cache directory and use it for lyrics too.
  Cached files are permanently cached. If the last modification of the original image
  indicates a change, the cached file is regenerated.
- import: for flac files, prefer vorbis comments over id3 tags as recommended
  by the flac people

2008-x-x Version 0.2.1-BETA
- if lyrics are loaded from internet and no local lyrics exist yet, they are now
  saved automatically