@@ -296,7 +296,7 @@ XXXXXXXXXX: Version 0.0.8-ALPHA
 2008-01-04: Version 0.1.12-BETA
 - Fix compilation and some compiler warnings.
 - Fix build with FLAC++ >= 1.1.3.
-- Rename image_convert.sh to muggle-image-convert, install it in
+
   "make install", make it a bit more robust.
 
 2008-4-11: Version 0.2.0-BETA
@@ -344,3 +344,5 @@ XXXXXXXXXX: Version 0.0.8-ALPHA
   finished. And the message "loading lyrics" will only appear after they have been
   loaded. If you don't like it, update vdr or send me a patch.
 - make the compile option USE_BITMAP work again on unmodified FF cards
+- make sure a displayed list is never empty by moving up in the tree if needed.
+  If the list is then still empty, display an item "Synchronize data base".
